# terraform_aws

./: .dockerignore  .flake8  .gitignore  .terraform.lock.hcl  Dockerfile  Makefile  README.md  loggers.py  main.tf  outputs.tf  pyproject.toml  settings.py  variables.tf
_modules/amplify/: buildspec.yaml  main.tf
_modules/api_gateway/: main.tf
_modules/api_gateway_ws/: main.tf
_modules/cloudwatch/: main.tf
_modules/cognito/: main.tf
_modules/default_vpc/: main.tf
_modules/ecr/: ecr_docker_builder.sh  main.tf
_modules/ecs/: main.tf
_modules/lambda/: main.tf
_modules/layers/: layer_builder.sh  main.tf
_modules/rds_postgresql/: main.tf
_modules/s3_cloudfront/: main.tf
_modules/s3_cloudfront/bucket/: index.html
_modules/ses/: main.tf
_modules/simple_storage_service/: main.tf
_modules/sns/: main.tf
_modules/sqs/: main.tf
_modules/ssm/: main.tf
_modules/vpc/: main.tf
lambdas/MyHTTPLambda/: main.py
lambdas/MyLambda/: main.py
lambdas/MyWSAuthLambda/: main.py
lambdas/MyWSLambda/: main.py
src/apps/: main.py
src/apps/CORE/: schemas.py  types.py
